--- a/BabuinLand/css/styles.css
+++ b/BabuinLand/css/styles.css
@@ -125,7 +125,7 @@ hr {
   box-shadow: 0 1px 5px 1px #cccccc;
 }
 #menu-tile {
-  background: url('../images/Chechnya.jpg') no-repeat;
+  background: url('../images/hechnya.jpg') no-repeat;
   background-position: center;
 }
 #specials-tile {
