--- a/BabuinLand/css/styles.css
+++ b/BabuinLand/css/styles.css
@@ -37,14 +37,11 @@ body {
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
 }
-.navbar-brand p { /* Kosher cert */
+.navbar-brand p { 
   color: #c3cbd6;
   text-transform: uppercase;
   font-size: .7em;
   margin-top: 15px;
-}
-.navbar-brand p span { /* Star-K */
-  vertical-align: middle;
 }
 
 #nav-list {
@@ -59,16 +56,13 @@ body {
   background: #c3cbd6;
 }
 
-#nav-list a span {
-  font-size: 1.8em;
-}
+#nav-list a  {
+  font-size: 1.2em;
 
-#phone {
-  margin-top: 5px;
-}
-#phone a { /* Phone number */
-  text-align: right;
-  padding-bottom: 0;
+  }
+#nav-list a i {
+  font-size: 1.4em;
+
 }
 
 hr {
@@ -77,8 +71,10 @@ hr {
 
 #navbarToggle{
   border: 1px solid #D05663;
-    background-color: #748b6f;
-
+    background-color: #2a403d;
+}
+#navbarToggle i{
+  color:#d05663;
 }
 .navbar-header button.navbar-toggle {
   clear: both;
@@ -91,7 +87,7 @@ hr {
   margin-top: 30px;
   padding-top: 35px;
   padding-bottom: 30px;
-  background-color: #222;
+  background-color: #2a403d;
   border-top: 0;
 }
 .panel-footer div.row {
@@ -183,32 +179,45 @@ hr {
 /* END MENU CATEGORIES PAGE */
 
 /* SINGLE CATEGORY PAGE */
-.menu-item-tile {
-  margin-bottom: 25px;
+
+#babuin-list-title{
+  text-shadow: 1px 1px 1px #222;
+  margin-bottom: 40px;
+  margin-top:20px;
+  font-size: 1.4em;
+  background: #222;
+  border: 1px solid #d05663;
 }
-.menu-item-tile hr {
+
+.babuin-item-tile hr {
   width: 80%;
 }
-.menu-item-tile .menu-item-price {
-  font-size: 1.1em;
+
+.babuin-item-tile {
+  margin-bottom: 25px;
+  font-size: 1.3em;
   text-align: right;
   margin-top: -15px;
   margin-right: -15px;
+
 }
-.menu-item-tile .menu-item-price span {
-  font-size: .6em;
+#babuin-list-title div{
+  font-style: italic;
+  margin-bottom: 5px;
 }
-.menu-item-photo {
+
+.babuin-item-photo {
   position: relative;
-  border: 2px solid #3F0C1F; 
+  border: 2px solid #222; 
   overflow: hidden;
   padding: 0;
   margin-right: -15px;
   margin-left: auto;
   margin-bottom: 20px;
-  max-width: 250px;
+  max-width: 200px;
+  box-shadow: 0 0 50px #D05663;
 }
-.menu-item-photo div {
+.babuin-item-photo div {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -216,15 +225,19 @@ hr {
   background-color: #557c3e;
   text-align: center;
 }
-.menu-item-description {
+.babuin-item-description {
   padding-right: 30px;
+   color: #2a403d;
 }
-h3.menu-item-title {
+#babuin-hazard-lvl {
+  text-shadow: 0px 0px 8px #D05663;
+}
+h3.babuin-item-title {
   margin: 0 0 10px;
 }
-.menu-item-details {
+.babuin-item-details {
   font-size: .9em;
-  font-style: italic;
+
 }
 /* END SINGLE CATEGORY PAGE */
 
